--- a/Webvnue/Views/Shared/_Layout.cshtml
+++ b/Webvnue/Views/Shared/_Layout.cshtml
@@ -70,11 +70,11 @@
                 -->
                         @if (currentUser != null)
                         {
-                            <li><a href="/account/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
                         }
                         else
                         {
-                            <li><a href="/account/logon" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                         }
                     </ul>
                 </div>
